--- a/app.css
+++ b/app.css
@@ -36,7 +36,7 @@ a {
 
 /* navbar */
 .navbar {
-  background-color: var(--grey-300);
+  background-color: #1A1A1A;
   position: relative;
   width: 100%;
   box-sizing: border-box;
@@ -260,12 +260,12 @@ a {
 .form-control {
   width: 100%;
   box-sizing: border-box;
-  padding: 8px;
+  padding: 7px;
   border-radius: 8px;
   transition: 0.2s ease-in;
   border: none;
   box-shadow: 0px 0px 0px 1px var(--grey-100);
-  background-color: var(--grey-200);
+  background-color: #303030;
   outline: none;
   padding-left: 30px;
   color: var(--light);
@@ -333,14 +333,20 @@ a {
   border-radius: 8px;
   transition: 0.2s ease-in;
   outline-offset: 2px;
+  box-shadow: 0px -1px 0px 0px #A3A3A3 inset, 0px 0px 0px 1px #DEDEDE inset;
 }
 
 .btn-white:hover {
   background-color: #fffffff3;
 }
 
+.btn-white:active {
+  box-shadow: 0px 1px 2px 2px #DEDEDE inset;
+}
+
 .btn-white:focus {
   outline: 2px solid #005bd3 !important;
+  box-shadow: 0px -1px 0px 0px #A3A3A3 inset, 0px 0px 0px 1px #DEDEDE inset;
 }
 
 .btn_profile {
@@ -349,6 +355,35 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: .2s ease-in;
+}
+
+.btn_profile:hover {
+  background-color: #616161;
+}
+
+#notifactionBtn {
+  transition: .2s ease-in;
+}
+
+#notifactionBtn:hover {
+  background-color: #616161;
+}
+
+#notifactionBtn:active {
+  background-color: #616161;
+}
+
+#notifactionBtn:focus {
+  background-color: #616161;
+}
+
+.btn_profile:focus {
+  background-color: #616161;
+}
+
+.btn_profile:active {
+  background-color: #616161;
 }
 
 .btn_profile .profile_wrap {
@@ -481,7 +516,7 @@ main {
 
 .callout {
   padding: 12px 15px;
-  background-color: var(--grey-300);
+  background-color: #1A1A1A;
   position: relative;
   border-radius: 8px;
 }
